--- a/03_Ch_4_Orthogonality/056-least_squares_data.ipynb
+++ b/03_Ch_4_Orthogonality/056-least_squares_data.ipynb
@@ -16,7 +16,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: Data, \n",
+    "keywords: Data, Model parameterization, Minimum Mean Square Error, Regression\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -45,7 +45,11 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- "
+    "- what a data fitting problem is and how it relates to least squares\n",
+    "- model parameterization and examples of different parameterizations\n",
+    "- the Minimum Mean Squared Error (MMSE)\n",
+    "- the regression model and one of its application (auto-regressive model for time-series modeling)\n",
+    "- the standard tricks for model selection: generalization and validation  "
    ]
   },
   {
@@ -74,7 +78,7 @@
     "These _data pairs_ $(\\vv x^{(i)}, y^{(i)})$ are sometimes also called _observations, examples, samples, or measurements_ depending on context.\n",
     "\n",
     ":::{note}\n",
-    "The superscript $^{(i)}$ denotes the $i$-th data point. For example, $\\vv x^{(i)} \\in \\mathbb{R}^m$ is the $i^{th}$ independent variable, and $x_j^{(i)}$ is the value of $j^{th}$ feature for example $i$.\n",
+    "The superscript $^{(i)}$ denotes the $i$-th data point. For example, ${\\vv x^{(i)} \\in \\mathbb{R}^m}$ is the $i^{th}$ independent variable, and $x_j^{(i)}$ is the value of $j^{th}$ feature for example $i$.\n",
     ":::\n",
     "\n",
     "### Model Parameterization\n",
@@ -91,7 +95,7 @@
     "In [(LP)](#LP_eqn), the functions $f_i: \\mathbb{R}^m \\to \\mathbb{R}$ are _basis functions_ or _features_ that we choose before hand. \n",
     "\n",
     ":::{warning}\n",
-    "Note that the term basis here is realted to, but different from, our previous use of the term. \n",
+    "Note that the term basis here is related to, but different from, our [previous use](../01_Ch_2_Vector_Spaces_and_Bases/034-basis_dim.ipynb#basis_defn) of the term. \n",
     ":::\n",
     "\n",
     "When we solve the data fitting problem, we will look for the _parameters_ $\\theta_i$ that, among other things, make the model prediction $\\hat{y}_i = \\hat{f}(\\vv x^{(i)})$ **consistent with the observed data**, i.e., we want $y^{(i)} \\approx y^{(i)}$.\n",
@@ -157,7 +161,13 @@
     "\\hat{\\vv \\theta} = (A^TA)^{-1}A^T\\vv y. \n",
     "$$\n",
     "\n",
-    "The resulting average least squares error $\\frac{\\|A\\hat{\\vv \\theta} - \\vv y\\|^2}{N}$ is called the _Minimum Mean-Square Error (MMSE)_."
+    ":::{prf:definition}\n",
+    ":label: MMSE_defn\n",
+    "The resulting average least squares error \n",
+    "$$\\frac{\\|A\\hat{\\vv \\theta} - \\vv y\\|^2}{N}\n",
+    "$$\n",
+    "is called the _Minimum Mean-Square Error (MMSE)_.\n",
+    ":::"
    ]
   },
   {
@@ -180,7 +190,7 @@
     "\\frac{1}{N}\\sum_{i=1}^N (\\text{average}(\\vv y) - y^{(i)})^2,\n",
     "$$\n",
     "\n",
-    "which is called the variance of $\\vv y$, and measures how \"wiggly\" $\\vv $ is."
+    "which is called the _variance_ of $\\vv y$, and measures how \"wiggly\" $\\vv y$ is."
    ]
   },
   {
@@ -285,15 +295,127 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Ch_4_Orthogonality/056-least_squares_data.ipynb)"
+    "## Regression Models\n",
+    "\n",
+    "We now consider the setting of vector-valued independent variables ${\\vv x \\in \\mathbb{R}^n}$. The analog of a straight-line fit here is a _linear regression model_ of the form:\n",
+    "$$\n",
+    "\\hat{y} = \\hat{f}(\\vv x) = \\boldsymbol \\beta^{\\top} \\vv x + v,\n",
+    "$$\n",
+    "where $\\boldsymbol\\beta \\in \\mathbb{R}^{n}$ and $v \\in \\mathbb{R}$. If we set $\\theta = \\begin{bmatrix} v \\\\ \\boldsymbol \\beta \\end{bmatrix}$, then the model becomes:\n",
+    "\\begin{equation}\n",
+    "\\label{regress_eqn}\n",
+    "\\hat{y} = \\theta_1 + \\theta_2 x_1 + \\cdots + \\theta_{n+1} x_n.\n",
+    "\\end{equation}\n",
+    "We can view this as fitting within our general [linear in the parameters model](#LP_eqn) by setting $f_1(\\vv x) = 1$ and $f_i(\\vv x) = x_{i-1}$ for $i = 2, \\ldots, n+1$, so that $p = n+1$.\n",
+    "\n",
+    "We are of course not obliged to use these features. Instead, suppose that we have $p-1$ features $f_2(\\vv x), \\ldots, f_p(\\vv x)$, and assume we have set $f_1(x) = 1$, as is common done. If we define:\n",
+    "$$\n",
+    "\\tilde{\\vv x} = \\begin{bmatrix} f_2(x) \\\\ \\vdots \\\\ f_p(x) \\end{bmatrix} \\in \\mathbb{R}^{p-1}\n",
+    "$$\n",
+    "we can write a linear regression model in the new feature vector $\\tilde{\\vv x}$:\n",
+    "\n",
+    "$$\n",
+    "\\hat{y} = \\theta_1 f_1(\\vv x) + \\cdots + \\theta_p f_p(\\vv x) = \\boldsymbol \\beta^{\\top} \\tilde{\\vv x} + v\n",
+    "$$\n",
+    "\n",
+    "where:\n",
+    "\n",
+    "1. $\\tilde{\\vv x} = (f_2(\\vv x), \\ldots, f_p(\\vv x))$ are the _transformed features_\n",
+    "2. $v = \\theta_1$ is called the _affine term_\n",
+    "3. $\\boldsymbol\\beta = (\\theta_2, \\theta_3, \\ldots, \\theta_p)$ is the _linear term_\n",
+    "\n",
+    "### Application: Auto-Regressive Time Series Modeling\n",
+    "\n",
+    "Here is a very widely used application of the above ideas in the context of time-series forecasting. Our goal here is to fit a model that predicts elements of a time series $z_1, z_2, \\ldots,$ where $z_t \\in \\mathbb{R}$ is a scalar quantity of interest.\n",
+    "\n",
+    "A standard approach is to use an [auto-regressive (AR) prediction model](https://en.wikipedia.org/wiki/Autoregressive_model):\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\label{AR_eqn}\n",
+    "\\hat{z}_{t+1} = \\theta_1 z_t + \\theta_2 z_{t-1} + \\cdots + \\theta_M z_{t-M+1}, \\quad t = M, M+1, \\ldots \\quad (AR)\n",
+    "\\end{equation}\n",
+    "\n",
+    "In [equation (AR)](#AR_eqn), the parameter $M$ is the _memory of the model_, and $\\hat{z}_{t+1}$ is the prediction of the next value based on the previous $M$ observations. We will choose $\\boldsymbol \\theta \\in \\mathbb{R}^M$ to minimize\n",
+    "\n",
+    "$$\n",
+    "(\\hat{z}_{M+1} - z_{M+1})^2 + \\cdots + (\\hat{z}_{T} - z_{T})^2\n",
+    "$$\n",
+    "We can fit this within our [regression model](#regress_eqn) framework by \n",
+    "$$\n",
+    "y^{(i)} = z_{M+i}, \\quad \\vv x^{(i)} = \\begin{bmatrix} z_{M+i-1} \\\\ z_{M+i-2} \\\\ \\vdots \\\\ z_{i} \\end{bmatrix} \\in \\mathbb{R}^M, \\quad i = 1, \\ldots, T-M.\n",
+    "$$\n",
+    "\n",
+    "A little bit of bookkeeping allows us to conclude that we have ${N = T-M}$ examples and $p = M$ features.\n",
+    "\n",
+    "::::{prf:example} LAX Temperature Prediction\n",
+    ":label: LAX_tem_eg\n",
+    "\n",
+    "As an example, consider the time series of hourly temperature at Los Angeles International Airport, May 1-31, 2016, with length $31 \\cdot 24 = 744$. The simple constant prediction $\\hat{z}_{t+1} = 61.76^o \\ \\text{F}$ (the average temperature) has RMS prediction error $3.05^o \\ \\text{F}$ (the standard deviation). The very simple predictor $\\hat{z}_{t+1} = z_t$, i.e., guessing that the temperature next hour is the same as the current temperature, has RMS error $1.16^o \\ \\text{F}$. The predictor $\\hat{z}_{t+1} = z_{t-23}$, i.e., guessing that the temperature next hour is what is was yesterday at the same time, has RMS error $1.73^o \\ \\text{F}$.\n",
+    "\n",
+    "We fit an AR model with memory $M=8$ using least squares, with $N=31 \\cdot 24 - 8 = 736$ samples. The RMS error of this predictor is $0.98^o \\ \\text{F}$, smaller than the RMS errors for the simple predictors described above. [This figure](#LAX_temp) shows the temperature and the predictions for the first five days.\n",
+    "\n",
+    ":::{figure}../figures/05-LAX_temp.jpg\n",
+    ":label:LAX_temp\n",
+    ":alt:LAX temperature prediction\n",
+    ":width: 400px\n",
+    ":align: center\n",
+    ":::\n",
+    "::::"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Model Selection, Generalization, and Validation\n",
+    "\n",
+    "This section is entirely **practical**: these are standard “tricks of the trade” that you will revisit in more detail in mae advanced classes on statistics and machine learning.\n",
+    "\n",
+    "Our starting point is a philosophical question: what is the foul of a learned model? Perhaps surprisingly, it is **NOT TO PREDICT OUTCOMES FOR THE GIVEN DATA**; after all, we already have this data! Instead, we want to **predict the outcome on new, unseen data.**\n",
+    "\n",
+    "If a model makes reasonable predictions on new unseen data, it is said to _generalize_. On the other hand, a model that makes poor predictions on new unseen data, but predicts the given data well, is said to be **over-fit.**\n",
+    "\n",
+    ":::{note} Validation\n",
+    "A simple but effective methal to guess if a model will generalize is called _validation_. The idea is to split your original data into a training set and a test set. Typical splits used in practice are $80 \\%/20\\%$ and $90 \\%/10\\%$.\n",
+    ":::\n",
+    "\n",
+    "Then, we **only** use the _training data_ to fit (or “train”) our model, and then evaluate the model’s performance on the **test set**. If the prediction errors on the training and test sets are similar, then we **guess the model will generalize**. This is rarely guaranteed, but such a comparison is often predictive of a model’s generalization properties.\n",
+    "\n",
+    "Validation is often used for _model selection_, ie., to choose among different candidate models. For example, by comparing train/test errors, we can select between;\n",
+    "\n",
+    "1. Polynomial models of different degrees.\n",
+    "2. Regression models with different sets of features\n",
+    "3. AR models with different memories.\n",
+    "\n",
+    "::::{prf:example} Errors with Varying Degrees of Polynomial\n",
+    "Models are fit using a training set of 100 points, and the plots below show test set of 100 (green) points.\n",
+    "\n",
+    ":::{figure}../figures/05-data_ls_eg_1.jpg\n",
+    ":label:data_ls_eg_1\n",
+    ":alt:Polynomial fit 100\n",
+    ":width: 400px\n",
+    ":align: center\n",
+    ":::\n",
+    "\n",
+    ":::{figure}../figures/05-data_ls_eg_2.jpg\n",
+    ":label:data_ls_eg_2\n",
+    ":alt:RMS_degree\n",
+    ":width: 400px\n",
+    ":align: center\n",
+    ":::\n",
+    "\n",
+    "[This plot](#data_ls_eg_2) shows train and test error (RMS standards for root mean square, and is the square root of [MMSE](#MMSE_defn)) vs. the degree of the polynomial being fit. Notice that despite train error decreasing monotonically, test error goes down and then increases as we start to over-fit. This plot suggests that pdynomials of degree 4,5, or 6 will generalize well while achieving a small error.\n",
+    "\n",
+    "For more about validation and feature engineering, refer to VMLS Ch. 13.2 and 13.3. These are essertivel components of modern data science and machine learning.\n",
+    "::::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Ch_4_Orthogonality/056-least_squares_data.ipynb)"
+   ]
   }
  ],
  "metadata": {
