started on linear odes section

--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/087-diagonalization.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/087-diagonalization.ipynb
@@ -48,7 +48,7 @@
     "- how to define eigenbases,\n",
     "- how to define similar matrices,\n",
     "- how to define the geometric and algebraic multiplicity of an eigenvalue,\n",
-    "- when and how a square matrix $A$ can be diagonalized as $A = P^{-1}DP$, where $D$ is diagonal."
+    "- when and how a square matrix $A$ can be diagonalized as $A = PDP^{-1}$, where $D$ is diagonal."
    ]
   },
   {
