added to odes page

--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/088-linear_odes.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/088-linear_odes.ipynb
@@ -98,8 +98,46 @@
     "u(t) = be^{a(t - t_0)}\n",
     "\\end{align*}\n",
     "\n",
-    "solves [](expr:ODE)."
+    "solves [](expr:ODE).\n",
+    "\n",
+    ":::{prf:example} Half-life of an isotope\n",
+    ":label: odes-ex1\n",
+    "\n",
+    "The radioactivity decay of uranium-238 is governed by the differential equation\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{du}{dt} = -\\gamma u\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $c = u(0)$ is the initial amount of U238 at $t_0 = 0$. We see that the amount $u(t)$ is decaying to zero exponentially quickly with \"rate\" $\\gamma$.\n",
+    "\n",
+    "An isotope's *half-life* $t_*$ is how long it takes for the amount of a sample to decay to half its initial value, i.e., $u(t_*) = \\frac 1 2 u(0)$. To determine $t_*$, we solve\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    &u(t_*) = u(0) e^{-\\gamma t_2} = \\frac 1 2 u(0)\\\\\n",
+    "    &\\iff e^{-\\gamma t_*} = \\frac 1 2 \\iff t_* = \\frac{\\log 2}{\\gamma}\n",
+    "\\end{align*}\n",
+    ":::\n",
+    "\n",
+    "Before proceeding to the general case, we make some simple but useful observations:\n",
+    "\n",
+    "* The zero function $u(t) = 0$ for all $t$ is a solution with $c=0$. This is known as an *equilibrium of fixed point solution*.\n",
+    "\n",
+    "* If $a > 0$, then solutions grow exponentially: this implies $u = 0$ is an *unstable equilibrium*, beacuse any small nonzero initial condition $u(t_0) = \\epsilon$ will \"blow up\" far away from $u=0$.\n",
+    "\n",
+    "* If $a < 0$, the solutions decay exponentially; this implies $u = 0$ is a *stable equilibrium* (in fact globally asymptotically so), which means that $u(t) \\to 0$ as $t\\to \\infty$ for any initial condition $u(t_0)$.\n",
+    "\n",
+    "* The borderline case is $a = 0$, in which case all solutions are constant, i.e., $u(t) = u(t_0)$ for all $t$. Such systems are called *marginally stable (or just stable)* because while they don't blow up on you, they also don't converge to $u = 0$.\n",
+    "\n",
+    "![alt text](../figures/04-linear_ode_stability.png)\n",
+    "\n",
+    "## First Order Dynamical Systems"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
