added linear functions

--- a/03_Ch_4_Orthogonality/056-least_squares_data.ipynb
+++ b/03_Ch_4_Orthogonality/056-least_squares_data.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "\\begin{equation}\n",
     "\\label{y_app_f}\n",
-    "y \\approx f(x).  \\qquad (M)\n",
+    "y \\approx f(x).  \\qquad \\text{(M)}\n",
     "\\end{equation}\n",
     "\n",
     "### Data\n",
@@ -89,7 +89,7 @@
     "\n",
     "\\begin{equation}\n",
     "\\label{LP_eqn}\n",
-    "\\hat{f}(\\vv x) = \\theta_1 f_1(\\vv x) + \\theta_2 f_2(\\vv x) + \\cdots + \\theta_p f_p(\\vv x). \\qquad (LP) \n",
+    "\\hat{f}(\\vv x) = \\theta_1 f_1(\\vv x) + \\theta_2 f_2(\\vv x) + \\cdots + \\theta_p f_p(\\vv x). \\qquad \\text{(LP)} \n",
     "\\end{equation}\n",
     "\n",
     "In [(LP)](#LP_eqn), the functions $f_i: \\mathbb{R}^m \\to \\mathbb{R}$ are _basis functions_ or _features_ that we choose before hand. \n",
