finished odes page

--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/088-linear_odes.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/088-linear_odes.ipynb
@@ -217,15 +217,45 @@
     "\n",
     "i.e., these form a [basis](#basis_defn) for the solutions of [(LTI)](#expr:LTI); which particular solution we select is specified by the initial conditions via $\\vv{c} = V^{-1}u(t_0)$.\n",
     "\n",
-    "TODO add example here\n",
     "\n",
-    "TODO add final comments here"
+    "\n",
+    ":::{prf:example} Solving a linear ODE with $2\\times 2$ coefficient matrix\n",
+    ":label: odes-ex2\n",
+    "\n",
+    "Consider $\\frac{d}{dt}\\vv u = A\\vv u$, with $A = \\bm 1&-1\\\\2&4\\em$. We are given that $A$ has eigenvalue/eigenvector pairs:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\lambda_1 = 2, \\vv{v_1} = \\bm 1\\\\ -1\\em \\quad\\text{and} \\quad \\lambda_2 = 3, \\vv{v_2} = \\bm 1\\\\-2\\em,\n",
+    "\\end{align*}\n",
+    "\n",
+    "and therefore solutions $\\vv u(t)$ take the form\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\vv u(t) = c_1 e^{\\lambda_1 (t - t_0)} \\vv{v_1} + c_2 e^{\\lambda_2 (t - t_0)}\\vv{v_2} = c_1e^{2(t - t_0)}\\bm 1\\\\-1\\em + c_2 e^{3(t - t_0)}\\bm 1\\\\-2\\em.\n",
+    "\\end{align*}\n",
+    "\n",
+    "Suppose we have the requirement that $\\vv u(t_0) = \\bm 3\\\\4\\em$, then we solve\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\vv u(t_0) = c_1 \\bm 1\\\\-1\\em + c_2 \\bm 1\\\\-2\\em = \\bm 1&1\\\\-1-2\\em \\bm c_1\\\\c_2\\em = \\bm 3\\\\4 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "for $\\bm c_1\\\\c_2\\em = \\bm 10 \\\\-7\\em$, and obtain the specific solution \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\vv u(t) = 10e^{2(t - t_0)}\\bm 1\\\\-1\\em - 7e^{3(t - t_0)}\\bm 1\\\\-2\\em.\n",
+    "\\end{align*}\n",
+    ":::\n",
+    "\n",
+    "```{note} A few final comments\n",
+    "\n",
+    "* [(SOL)](#expr:SOL) shows that a solution $\\vv u(t)$ is a sum of exponential functions \"in the direction\" of the eigenvectors $\\vv{v_i}$. These functions either decay ($\\lambda_i < 0$), explode ($\\lambda_i > 0$), or stay constant ($\\lambda_i = 0$).\n",
+    "\n",
+    "* We have assumed *real* eigenvalues and eigenvectors throughtout. It turns out our analysis holds true even when eigenvalues/vectors are complex; however, interpreting the results as solutions requires a little more care (we'll address this next class).\n",
+    "\n",
+    "* [(SOL)](#expr:SOL) does not hold if a matrix is not diagonalizable. We'll see a brief previous of how to deal with matrices we can't diagonalize later (you'll see much more in ESE 2100).\n",
+    "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
