--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/086-repeated_complex_eigenvalues.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/086-repeated_complex_eigenvalues.ipynb
@@ -145,7 +145,7 @@
     "\n",
     "We want to belabor the derivation of the following properties of eigenvalues: they mostly follow from properties of the determinant and the Funamental Theorem of Algebra (which states that any degree $n$ polynomial equation with complex coefficients has exactly $n$ complex roots, counting multiplicities). The TLDR is that for any $A \\in \\mathbb{R}^{n\\times n}$, its characteristic polynomial is a degree $n$ polynomial with real coefficients and can thus be factored as:\n",
     "\\begin{align*}\n",
-    "    \\det (A - \\lambda I) - (-1)^n (\\lambda - \\lambda_1)(\\lambda - \\lambda_2) \\dots (\\lambda - \\lambda_n)\n",
+    "    \\det (A - \\lambda I) = (-1)^n (\\lambda - \\lambda_1)(\\lambda - \\lambda_2) \\dots (\\lambda - \\lambda_n)\n",
     "\\end{align*}\n",
     "where the complex numbers $\\lambda_1, ..., \\lambda_n$, some of which may be repeated, are the eigenvalues of $A$. Therefore we immediately conclude that:\n",
     "\n",
