--- a/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
@@ -224,7 +224,7 @@
     "\\vv e_2 = \\bm 0 \\\\ 1 \\\\ 0\\em,\n",
     "\\vv e_3 = \\bm 0 \\\\ 0 \\\\ 1\\em\n",
     "\\end{equation}\n",
-    "are linearly dependent because the only way \n",
+    "are linearly independent because the only way \n",
     "$$\n",
     "c_1 \\vv e_1 + c_2 \\vv e_2 + c_3 \\vv e_3 = \\bm c_1 \\\\ c_2 \\\\ c_3 \\em = \\vv 0\n",
     "$$\n",
@@ -444,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
