lec 10 done except rviz/pybullet widget

--- a/01_Ch_2_Vector_Spaces_and_Bases/035-kernel_image.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/035-kernel_image.ipynb
@@ -133,10 +133,10 @@
     "\n",
     "From [](#null_space_check), Null$(A)$ is a vector space! If $A \\in \\mathbb{R}^{m \\times n}$, then Null$(A)$ is a subspace of $\\mathbb{R}^n$ (where $\\vv x$ lived). This property leads to the following incredibly important _superposition principle_ for solutions to homogeneous linear systems. \n",
     "\n",
-    "```{prf:theorem} Superposition principle\n",
+    ":::{prf:theorem} Superposition principle\n",
     ":label: super_thm\n",
     "If $\\vv u_1, \\vv u_2, \\ldots, \\vv u_k$ are each solutions to $A \\vv u = 0$, then so is EVERY [linear combination](./033-span_lin_ind.ipynb#ln_comb) $c_1 \\vv u_1 + c_2\\vv u_2 + \\ldots + c_k\\vv u_k$.\n",
-    "```\n",
+    ":::\n",
     "\n",
     "```{warning}\n",
     "The set of solutions to $A \\vv x = \\vv b$, where $\\vv b \\neq \\vv 0$, is NOT a subspace! \n",
@@ -486,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
