Fixed small mistakes

--- a/03_Ch_4_Orthogonality/052-gram_schmidt.ipynb
+++ b/03_Ch_4_Orthogonality/052-gram_schmidt.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "From this picture, we observe that we can write $\\vv{x_2} = \\vv p  +\\vv{v_2}$ where $\\vv{p}$ is the component of $\\vv{x_2}$ parallel with $\\vv{x_1}$ and $\\vv{v_2}$ is what's left over, i.e., the part of $\\vv{x_2}$ that is orthogonal to $\\vv{x_1} = \\vv{v_1}$.\n",
     "\n",
-    "If $\\vv p$ is parallel with $\\vv{v_1}$, then we must have that $\\vv{p} = c\\vv{v_1}$ for some constant $c$, and therefore $\\vv{2} = \\vv{x_2} - \\vv p = \\vv{x_2} - c\\vv{v_1}$.\n",
+    "If $\\vv p$ is parallel with $\\vv{v_1}$, then we must have that $\\vv{p} = c\\vv{v_1}$ for some constant $c$, and therefore $\\vv{v_2} = \\vv{x_2} - \\vv p = \\vv{x_2} - c\\vv{v_1}$.\n",
     "\n",
     "Now from our [previous discussion](./051-orthogonal_orthonormal_bases#coordinates-norm-orthogonal-thm), we know that $c = \\frac{\\langle \\vv{x_2}, \\vv{v_1}\\rangle}{\\|\\vv{v_1}\\|^2}$ (why?) but let's see a different way of computing $c$. We want $\\langle \\vv{v_2}, \\vv{v_1} \\rangle = 0$, so we must have:\n",
     "\n",
