--- a/03_Ch_4_Orthogonality/053-orthogonal_matrices.ipynb
+++ b/03_Ch_4_Orthogonality/053-orthogonal_matrices.ipynb
@@ -88,7 +88,7 @@
     "A $2\\times 2$ matric $Q = \\bm a&b\\\\c&d\\em$ is orthogonal if and only if\n",
     "\n",
     "\\begin{align*}\n",
-    " Q^\\top Q = \\bm a^2 + c^2 & ab + cd \\\\ ac + cd & b^2 + d^2\\em = \\bm 1\\\\ 0\\\\ 0\\\\ 1\\em \n",
+    " Q^\\top Q = \\bm a^2 + c^2 & ab + cd \\\\ ac + cd & b^2 + d^2\\em = \\bm 1& 0\\\\ 0& 1\\em \n",
     "\\end{align*}\n",
     "\n",
     "or equivalently\n",
