--- a/03_Ch_4_Orthogonality/055-least_squares.ipynb
+++ b/03_Ch_4_Orthogonality/055-least_squares.ipynb
@@ -180,7 +180,7 @@
     "\\em\n",
     "$$\n",
     "\n",
-    "A direct application of Gaussian Elimination shows that $\\vv b \\in $img$A$, and so the system is incompatible — it has no solution. Of course, to apply the least squares method, we are not required to check this in advance. If the system has a solution, it is the least squares solution too, and the least squares method will ﬁnd it.\n",
+    "A direct application of Gaussian Elimination shows that $\\vv{b}\\notin $Col$A$, and so the system is incompatible — it has no solution. Of course, to apply the least squares method, we are not required to check this in advance. If the system has a solution, it is the least squares solution too, and the least squares method will ﬁnd it.\n",
     "\n",
     "Let us ﬁnd the least squares solution based on the Euclidean norm, uisng the [XLS formula](#least_squares_thm_eqn).\n",
     "$$\n",
